# miniC-project

./: .gitignore  CMakeLists.txt  README.md  check_winner  classify_number  compress_sequence  report.md
examples/: Math.mc  bitwise_ok  bitwise_ok.mc  block_comment_ok  block_comment_ok.mc  check_winner  check_winner.mc  classify_number.mc  codegen_aggregate  codegen_aggregate.mc  codegen_aggregate_call  codegen_aggregate_call.mc  date_module.mc  float_ok  float_ok.mc  graph_traversal_bfs_dfs.mc  if_expr_ok  if_expr_ok.mc  input_ok  input_ok.mc  lexer_bad.mc  methods_visibility_ok  methods_visibility_ok.mc  module_import_ok  module_import_ok.mc  module_private_access_bad.mc  module_private_import_bad.mc  module_specific_import_ok.mc  ok_array  ok_array.mc  ok_namespace  ok_namespace.mc  ok_struct  ok_struct.mc  operator_overload_ok  operator_overload_ok.mc  overload_named_default_ok  overload_named_default_ok.mc  parser_bad_expr.mc  pipe_ok  (+9 more)
runtime/: minic_runtime.s
specs/: codegen.md  grammar.md  semantics.md  types.md
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  token.cpp  token.hpp
tests/: MathTasks.mc  check_winner.mc  compress_sequence.mc  module_math_demo.mc  number_triangle  number_triangle.mc
